# cfd

./: .gitignore  CMakeLists.txt
include/: Assets.h  Grid1D.h  Grid2D.h  Matrix.h  Matrix2D.h  PDESolver.h  Visualise.h
src/: Assets.c  Grid1D.c  Grid2D.c  Matrix.c  Matrix2D.c  PDESolver.c  Visualise.c  test.c
